package com.narxoz.rpg.equipment;

public interface Armor {
    int getDefense();
    String getArmorType();
    String getArmorInfo();
}
